dev-scripts/manifests/storage/seaweedfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs
  namespace: open-cluster-management-observability
spec:
  selector:
    app.kubernetes.io/name: seaweedfs
  ports:
    - name: s3
      port: 8333
      protocol: TCP
      targetPort: 8333
    - name: filer
      port: 8888
      protocol: TCP
      targetPort: 8888
