dev-scripts/manifests/storage/minio-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio
  namespace: open-cluster-management-observability
  labels:
    app.kubernetes.io/name: minio
  annotations: {}
spec:
  port:
    targetPort: console
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: minio
